[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loading"
version = "0.1.0"
description = "A module that contains functions for creating and managing loading bars."
authors = [{ name = "Jerraf2p0", email = "invalid@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "colorama",
]

[project.urls]
Homepage = "https://valididiot.github.io/loading-v1"
Repository = "https://github.com/ValidIdiot/loading-v1"
Issues = "https://github.com/ValidIdiot/loading-v1/issues"
